--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,46 +1,62 @@
+@import "./waybar/rose-pine.css";
+
 * {
-    border: none;
-    border-radius: 0;
-    font-family: "VictorMono Nerd Font";
-    font-size: 13px;
-    min-height: 0;
+  /* reference the color by using @color-name */
+  background: @base;
+  border: none;
+  border-radius: 0;
+  font-family: "VictormMono Nerd Font";
+  font-size: 13px;
+  min-height: 0;
+  color: @text;
 }
 
-window#waybar {
-    background: #282828;
-    color: #ebdbb2;
+#custom.suspend button {
+	color: @love;
 }
-
-#window {
-    font-weight: bold;
-    font-family: "VictorMono Nerd Font";
-}
-/*
-#workspaces {
-    padding: 0 5px;
-}
-*/
 
 #workspaces button {
     padding: 0 5px;
     background: transparent;
-    color: #ebdbb2;
+    color: @muted;
     border-top: 2px solid transparent;
 }
 
 #workspaces button.focused {
-    color: #e67e80;
-    border-top: 2px solid #e67e80;
+    color: @love;
+    border-top: 2px solid @love;
 }
 
-#mode {
-    background: #ebdbb2;
-    border-bottom: 3px solid white;
+#window {
+	font-weight: bold;
+	font-family: "VictorMono Nerd Font";
 }
 
-#clock, #battery, #cpu, #memory, #network, #pulseaudio, #custom-spotify, #tray, #mode {
-    padding: 0 10px;
-    margin: 0 2px;
+#clock, #battery, #cpu, #memory, #network, #pulseaudio, #tray, #mode {
+	padding: 0 10px;
+	margin: 0 2px;
+}
+
+#custom-spotify {
+	padding: 0 10px;
+	margin: 0 2px;
+	color: @gold;
+}
+
+#battery.warning:not(.charging) {
+    color: white;
+    animation-name: blink;
+    animation-duration: 0.5s;
+    animation-timing-function: linear;
+    animation-iteration-count: 30;
+    animation-direction: alternate;
+}
+
+@keyframes blink {
+    to {
+        background-color: #ffffff;
+        color: black;
+    }
 }
 
 #battery {
@@ -53,44 +69,3 @@ window#waybar {
 #battery.charging {
 }
 
-@keyframes blink {
-    to {
-        background-color: #ffffff;
-        color: black;
-    }
-}
-
-#battery.warning:not(.charging) {
-    color: white;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: 30;
-    animation-direction: alternate;
-}
-
-#cpu {
-}
-
-#memory {
-}
-
-#network {
-}
-
-#network.disconnected {
-    background: #e67e80;
-}
-
-#pulseaudio {
-}
-
-#pulseaudio.muted {
-}
-
-#custom-spotify {
-    color: rgb(102, 220, 105);
-}
-
-#tray {
-}
