--- a/waybar/style.css
+++ b/waybar/style.css
@@ -165,3 +165,22 @@ window#waybar.PCSX2 #window {
 	background: #282a36;
 }
 
+#window {
+	color: #f8f8f2;
+	background: #282a36;
+}
+
+#workspaces button.active {
+	color: #ff6e67;
+}
+
+#wireplumber {
+	margin-top: 8px;
+	margin-left: 8px;
+	padding-left: 16px;
+	padding-right: 16px;
+	margin-bottom: 0;
+	border-radius: 26px;
+	color: #4d4d4d;
+	background: #c5ebfe;
+}
